--- a/main/html/content-areas/CA2 - Intro To Programming/subtopic/2.1-standard-data-types/2.1-standard-data-types.html
+++ b/main/html/content-areas/CA2 - Intro To Programming/subtopic/2.1-standard-data-types/2.1-standard-data-types.html
@@ -125,6 +125,154 @@
             <p><strong>When Used:</strong> Used for <strong>logical decisions</strong>, <strong>conditions</strong>, and <strong>control structures</strong> in programs.</p>
             <p><strong>Example:</strong> <code>True</code>, <code>False</code></p>
         </section>
+
+                        <!--quiz-->
+        <div class="quiz-container" id="quiz">
+            <div class="quiz-question" id="question"></div>
+            <div class="quiz-options" id="options"></div>
+            <div class="quiz-feedback" id="feedback"></div>
+            <button class="quiz-next" id="nextBtn" style="display:none;">Next</button>
+        <div class="quiz-result" id="result"></div>
+        </div>
+
+  <script>
+      const quizData = [
+        {
+          question: "What is an Integer?",
+          options: [
+            "A number with a decimal point",
+            "A sequence of characters",
+            "A whole number with no decimal point",
+            "A value that is either True or False"
+          ],
+          answer: "A whole number with no decimal point",
+          explanation: "Integers are whole numbers, positive or negative, without decimals. Example: 10, -4, 2025."
+        },
+        {
+          question: "Which of these is an example of a Float?",
+          options: ["42", "3.14", "True", "\"Hello\""],
+          answer: "3.14",
+          explanation: "Floats contain a decimal point, allowing fractional values. Example: 3.14, -0.5."
+        },
+        {
+          question: "When would you use a String data type?",
+          options: [
+            "For storing measurements like 2.75 meters",
+            "For counting items in a list",
+            "For storing text such as names or messages",
+            "For storing a True/False value"
+          ],
+          answer: "For storing text such as names or messages",
+          explanation: "Strings are sequences of characters, used for storing names, messages, or alphanumeric data."
+        },
+        {
+          question: "What are the only possible values of a Boolean?",
+          options: ["Positive or Negative", "On or Off", "True or False", "Yes or No"],
+          answer: "True or False",
+          explanation: "Booleans are logical values with only two states: True or False."
+        },
+        {
+          question: "Which data type would be most suitable for storing a person’s age?",
+          options: ["Integer", "Float", "String", "Boolean"],
+          answer: "Integer",
+          explanation: "A person's age is always a whole number, making Integer the best choice."
+        },
+        {
+          question: "Which data type is best for representing currency values like £19.99?",
+          options: ["Integer", "Float", "String", "Boolean"],
+          answer: "Float",
+          explanation: "Currency values require precision with decimal places, so Float is most appropriate."
+        },
+        {
+          question: "Which of the following is NOT a String?",
+          options: ["\"12345\"", "\"Hello World!\"", "42", "\"A1B2C3\""],
+          answer: "42",
+          explanation: "Strings are sequences of characters enclosed in quotes. 42 is an Integer, not a String."
+        },
+        {
+          question: "In programming, which data type is typically used for decision-making in IF statements?",
+          options: ["Integer", "Float", "String", "Boolean"],
+          answer: "Boolean",
+          explanation: "Booleans (True/False) are used in conditions to control the flow of a program."
+        }
+      ];
+
+
+        let currentQ = 0;
+        let score = 0;
+
+        const questionEl = document.getElementById("question");
+        const optionsEl = document.getElementById("options");
+        const feedbackEl = document.getElementById("feedback");
+        const resultEl = document.getElementById("result");
+        const nextBtn = document.getElementById("nextBtn");
+
+        function showQuestion() {
+          const q = quizData[currentQ];
+          questionEl.textContent = q.question;
+          feedbackEl.textContent = "";
+          feedbackEl.className = "quiz-feedback";
+          nextBtn.style.display = "none";
+
+          optionsEl.innerHTML = "";
+          q.options.forEach(opt => {
+            const btn = document.createElement("button");
+            btn.textContent = opt;
+            btn.onclick = () => checkAnswer(opt, btn);
+            optionsEl.appendChild(btn);
+          });
+        }
+
+        function checkAnswer(answer, button) {
+          const q = quizData[currentQ];
+          const optionButtons = optionsEl.querySelectorAll("button");
+
+          // Disable all buttons after an answer
+          optionButtons.forEach(b => b.disabled = true);
+
+          if (answer === q.answer) {
+            score++;
+            button.classList.add("correct");
+            feedbackEl.textContent = "✅ Correct! " + q.explanation;
+            feedbackEl.classList.add("correct");
+          } else {
+            button.classList.add("wrong");
+            feedbackEl.textContent = `❌ Wrong. The correct answer is "${q.answer}". ${q.explanation}`;
+            feedbackEl.classList.add("wrong");
+
+            // Highlight correct answer
+            optionButtons.forEach(b => {
+              if (b.textContent === q.answer) {
+                b.classList.add("correct");
+              }
+            });
+          }
+
+          nextBtn.style.display = "block";
+        }
+
+        function nextQuestion() {
+          currentQ++;
+          if (currentQ < quizData.length) {
+            showQuestion();
+          } else {
+            showResult();
+          }
+        }
+
+        function showResult() {
+          questionEl.textContent = "";
+          optionsEl.innerHTML = "";
+          feedbackEl.textContent = "";
+          nextBtn.style.display = "none";
+          resultEl.textContent = `You scored ${score} out of ${quizData.length}! 🎉`;
+        }
+
+        nextBtn.addEventListener("click", nextQuestion);
+
+        // Start quiz
+        showQuestion();
+      </script>
     </main>
     
     <arrow-Nav>
