--- a/main/html/index.html
+++ b/main/html/index.html
@@ -6,7 +6,7 @@
   <title>TLevelTutor</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
-
+<div class="page-wrapper">
     <header id="main-header">
         <a href="index.html">
           <img src="../images/logo.png" alt="TLevelTutor Logo" width="100" height="100" id="header-logo"/>
@@ -122,10 +122,11 @@
     })
 
   </script>
-
-</body>
+  
 <footer>
   <p>&copy; 2025 TLevelTutor. All rights reserved.</p>
   <p>For more information, visit our <strong>Coming Soon</strong> website.</p>
 </footer>
+</div>
+</body>
 </html>
